# final_project_from_courses

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: Image.cpp  RenderObj_impl.cpp  SoundBuffer_impl.cpp  Texture.cpp  Texture.hpp  Timer.cpp  Timer.hpp  debug_level.hpp  engine.cpp  glad.c  matrix.cpp  shader.cpp  sprite.cpp  sprite.hpp
game_src/: Bullet.cpp  Bullet.hpp  Enemy.cpp  Enemy.hpp  GameConst.hpp  Gun.cpp  Gun.hpp  GunSimple.cpp  GunSimple.hpp  Player.cpp  Player.hpp  Timer.cpp  Timer.hpp  game_impl.cpp  game_impl.hpp  player.cpp  player.hpp  score.cpp  score.hpp
game_src/enemy/: bigSpider.cpp  bigSpider.hpp  iEnemy.cpp  iEnemy.hpp  nest.cpp  nest.hpp  spider.cpp  spider.hpp
game_src/gun/: Bullet.cpp  Bullet.hpp  gun.cpp  gun.hpp  miniGun.cpp  miniGun.hpp  shotGun.cpp  shotGun.hpp  simpleGun.cpp  simpleGun.hpp
game_src/spawn_levels/: spawn_enemy.cpp  spawn_enemy.hpp  wave_1.cpp  wave_1.hpp
imgui_src/: CMakeLists.txt  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
include/: Image.hpp  RenderObj_impl.hpp  SoundBuffer_impl.hpp  Texture.hpp  engine.hpp  figure_struct.hpp  matrix.hpp  shader.hpp  sprite.hpp
include/glad/: glad.h
res/: bullet.txt  fire_ball.txt  map.txt  nest.txt  spider.txt  tank.txt  tank2.txt  test1.txt  test2.txt  vertexes2.txt
shader/: corpse.vert  head.frag  map.frag  map.vert
src/: Image.cpp  RenderObj_impl.cpp  SoundBuffer_impl.cpp  Texture.cpp  engine.cpp  figure_struct.cpp  glad.c  matrix.cpp  shader.cpp  sprite.cpp
